--- a/burnkaz/requirements.txt
+++ b/burnkaz/requirements.txt
@@ -15,7 +15,9 @@ Django==3.1.7
 django-cors-headers==3.7.0
 django-environ==0.4.5
 django-extensions==3.1.1
+django-filter==2.4.0
 djangorestframework==3.12.4
+dry-rest-permissions==0.1.10
 gunicorn==20.1.0
 idna==2.10
 kombu==5.0.2
